--- a/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
+++ b/Project_Plagiarism_Detection/3_Training_a_Model.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -484,34 +484,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2020-09-03 02:17:26 Starting - Starting the training job...\n",
-      "2020-09-03 02:17:28 Starting - Launching requested ML instances......\n",
-      "2020-09-03 02:18:33 Starting - Preparing the instances for training...\n",
-      "2020-09-03 02:19:22 Downloading - Downloading input data...\n",
-      "2020-09-03 02:19:57 Training - Training image download completed. Training in progress..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
+      "2020-09-03 03:06:14 Starting - Starting the training job...\n",
+      "2020-09-03 03:06:16 Starting - Launching requested ML instances......\n",
+      "2020-09-03 03:07:22 Starting - Preparing the instances for training...\n",
+      "2020-09-03 03:08:11 Downloading - Downloading input data...\n",
+      "2020-09-03 03:08:40 Training - Training image download completed. Training in progress..\u001b[34mbash: cannot set terminal process group (-1): Inappropriate ioctl for device\u001b[0m\n",
       "\u001b[34mbash: no job control in this shell\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:19:57,947 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:19:57,950 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:19:57,962 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:00,978 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:01,267 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:42,233 sagemaker-containers INFO     Imported framework sagemaker_pytorch_container.training\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:42,236 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:42,248 sagemaker_pytorch_container.training INFO     Block until all host DNS lookups succeed.\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:45,270 sagemaker_pytorch_container.training INFO     Invoking user training script.\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:45,510 sagemaker-containers INFO     Module train does not provide a setup.py. \u001b[0m\n",
       "\u001b[34mGenerating setup.py\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:01,267 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:01,267 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:01,267 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:45,510 sagemaker-containers INFO     Generating setup.cfg\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:45,510 sagemaker-containers INFO     Generating MANIFEST.in\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:45,510 sagemaker-containers INFO     Installing module with the following command:\u001b[0m\n",
       "\u001b[34m/usr/bin/python -m pip install -U . \u001b[0m\n",
       "\u001b[34mProcessing /opt/ml/code\u001b[0m\n",
       "\u001b[34mBuilding wheels for collected packages: train\n",
       "  Running setup.py bdist_wheel for train: started\n",
       "  Running setup.py bdist_wheel for train: finished with status 'done'\n",
-      "  Stored in directory: /tmp/pip-ephem-wheel-cache-7n6ic6id/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
+      "  Stored in directory: /tmp/pip-ephem-wheel-cache-xucmy64x/wheels/35/24/16/37574d11bf9bde50616c67372a334f94fa8356bc7164af8ca3\u001b[0m\n",
       "\u001b[34mSuccessfully built train\u001b[0m\n",
       "\u001b[34mInstalling collected packages: train\u001b[0m\n",
       "\u001b[34mSuccessfully installed train-1.0.0\u001b[0m\n",
       "\u001b[34mYou are using pip version 18.1, however version 20.2.2 is available.\u001b[0m\n",
       "\u001b[34mYou should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:03,156 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:03,171 sagemaker-containers INFO     Invoking user script\n",
+      "\u001b[34m2020-09-03 03:08:47,315 sagemaker-containers INFO     No GPUs detected (normal if no gpus installed)\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:47,327 sagemaker-containers INFO     Invoking user script\n",
       "\u001b[0m\n",
       "\u001b[34mTraining Env:\n",
       "\u001b[0m\n",
@@ -541,11 +541,11 @@
       "    },\n",
       "    \"input_dir\": \"/opt/ml/input\",\n",
       "    \"is_master\": true,\n",
-      "    \"job_name\": \"sagemaker-pytorch-2020-09-03-02-17-26-116\",\n",
+      "    \"job_name\": \"sagemaker-pytorch-2020-09-03-03-06-12-958\",\n",
       "    \"log_level\": 20,\n",
       "    \"master_hostname\": \"algo-1\",\n",
       "    \"model_dir\": \"/opt/ml/model\",\n",
-      "    \"module_dir\": \"s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-02-17-26-116/source/sourcedir.tar.gz\",\n",
+      "    \"module_dir\": \"s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-03-06-12-958/source/sourcedir.tar.gz\",\n",
       "    \"module_name\": \"train\",\n",
       "    \"network_interface_name\": \"eth0\",\n",
       "    \"num_cpus\": 4,\n",
@@ -584,8 +584,8 @@
       "\u001b[34mSM_NUM_CPUS=4\u001b[0m\n",
       "\u001b[34mSM_NUM_GPUS=0\u001b[0m\n",
       "\u001b[34mSM_MODEL_DIR=/opt/ml/model\u001b[0m\n",
-      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-02-17-26-116/source/sourcedir.tar.gz\u001b[0m\n",
-      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"epochs\":6,\"hidden_dim\":10,\"input_dim\":5,\"output_dim\":1},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-09-03-02-17-26-116\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-02-17-26-116/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
+      "\u001b[34mSM_MODULE_DIR=s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-03-06-12-958/source/sourcedir.tar.gz\u001b[0m\n",
+      "\u001b[34mSM_TRAINING_ENV={\"additional_framework_parameters\":{},\"channel_input_dirs\":{\"train\":\"/opt/ml/input/data/train\"},\"current_host\":\"algo-1\",\"framework_module\":\"sagemaker_pytorch_container.training:main\",\"hosts\":[\"algo-1\"],\"hyperparameters\":{\"epochs\":6,\"hidden_dim\":10,\"input_dim\":5,\"output_dim\":1},\"input_config_dir\":\"/opt/ml/input/config\",\"input_data_config\":{\"train\":{\"RecordWrapperType\":\"None\",\"S3DistributionType\":\"FullyReplicated\",\"TrainingInputMode\":\"File\"}},\"input_dir\":\"/opt/ml/input\",\"is_master\":true,\"job_name\":\"sagemaker-pytorch-2020-09-03-03-06-12-958\",\"log_level\":20,\"master_hostname\":\"algo-1\",\"model_dir\":\"/opt/ml/model\",\"module_dir\":\"s3://sagemaker-ap-south-1-357026092760/sagemaker-pytorch-2020-09-03-03-06-12-958/source/sourcedir.tar.gz\",\"module_name\":\"train\",\"network_interface_name\":\"eth0\",\"num_cpus\":4,\"num_gpus\":0,\"output_data_dir\":\"/opt/ml/output/data\",\"output_dir\":\"/opt/ml/output\",\"output_intermediate_dir\":\"/opt/ml/output/intermediate\",\"resource_config\":{\"current_host\":\"algo-1\",\"hosts\":[\"algo-1\"],\"network_interface_name\":\"eth0\"},\"user_entry_point\":\"train.py\"}\u001b[0m\n",
       "\u001b[34mSM_USER_ARGS=[\"--epochs\",\"6\",\"--hidden_dim\",\"10\",\"--input_dim\",\"5\",\"--output_dim\",\"1\"]\u001b[0m\n",
       "\u001b[34mSM_OUTPUT_INTERMEDIATE_DIR=/opt/ml/output/intermediate\u001b[0m\n",
       "\u001b[34mSM_CHANNEL_TRAIN=/opt/ml/input/data/train\u001b[0m\n",
@@ -602,36 +602,20 @@
       "\u001b[0m\n",
       "\u001b[34mUsing device cpu.\u001b[0m\n",
       "\u001b[34mGet train data loader.\u001b[0m\n",
-      "\u001b[34m2020-09-03 02:20:04,631 sagemaker-containers ERROR    ExecuteUserScriptError:\u001b[0m\n",
-      "\u001b[34mCommand \"/usr/bin/python -m train --epochs 6 --hidden_dim 10 --input_dim 5 --output_dim 1\"\u001b[0m\n",
-      "\u001b[34mTraceback (most recent call last):\n",
-      "  File \"/usr/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n",
-      "    \"__main__\", mod_spec)\n",
-      "  File \"/usr/lib/python3.6/runpy.py\", line 85, in _run_code\n",
-      "    exec(code, run_globals)\n",
-      "  File \"/opt/ml/code/train.py\", line 155, in <module>\n",
-      "    train(model, train_loader, args.epochs, criterion, optimizer, device)\n",
-      "  File \"/opt/ml/code/train.py\", line 75, in train\n",
-      "    print(\"Input Data\\npanakj_batch_x \\n\" +  batch_x +\"\\n\\npankaj_batch_y\\n\" + batch_y)\u001b[0m\n",
-      "\u001b[34mTypeError: add(): argument 'other' (position 1) must be Tensor, not str\u001b[0m\n",
+      "\u001b[34mEpoch: 1, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34mEpoch: 2, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34mEpoch: 3, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34mEpoch: 4, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34mEpoch: 5, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34mEpoch: 6, Loss: 11.05240876334054\u001b[0m\n",
+      "\u001b[34m2020-09-03 03:08:48,904 sagemaker-containers INFO     Reporting training SUCCESS\u001b[0m\n",
       "\n",
-      "2020-09-03 02:20:14 Uploading - Uploading generated training model\n",
-      "2020-09-03 02:20:14 Failed - Training job failed\n"
-     ]
-    },
-    {
-     "ename": "UnexpectedStatusException",
-     "evalue": "Error for Training job sagemaker-pytorch-2020-09-03-02-17-26-116: Failed. Reason: AlgorithmError: ExecuteUserScriptError:\nCommand \"/usr/bin/python -m train --epochs 6 --hidden_dim 10 --input_dim 5 --output_dim 1\"\nTraceback (most recent call last):\n  File \"/usr/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n    \"__main__\", mod_spec)\n  File \"/usr/lib/python3.6/runpy.py\", line 85, in _run_code\n    exec(code, run_globals)\n  File \"/opt/ml/code/train.py\", line 155, in <module>\n    train(model, train_loader, args.epochs, criterion, optimizer, device)\n  File \"/opt/ml/code/train.py\", line 75, in train\n    print(\"Input Data\\npanakj_batch_x \\n\" +  batch_x +\"\\n\\npankaj_batch_y\\n\" + batch_y)\nTypeError: add(): argument 'other' (position 1) must be Tensor, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnexpectedStatusException\u001b[0m                 Traceback (most recent call last)",
-      "\u001b[0;32m<timed eval>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, inputs, wait, logs, job_name, experiment_config)\u001b[0m\n\u001b[1;32m    497\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjobs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    498\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 499\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlatest_training_job\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    500\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    501\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_compilation_job_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/estimator.py\u001b[0m in \u001b[0;36mwait\u001b[0;34m(self, logs)\u001b[0m\n\u001b[1;32m   1137\u001b[0m         \u001b[0;31m# If logs are requested, call logs_for_jobs.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1138\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlogs\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;34m\"None\"\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1139\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlogs_for_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlog_type\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlogs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1140\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1141\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msagemaker_session\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwait_for_job\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36mlogs_for_job\u001b[0;34m(self, job_name, wait, poll, log_type)\u001b[0m\n\u001b[1;32m   3075\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3076\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mwait\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3077\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_check_job_status\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mjob_name\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdescription\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"TrainingJobStatus\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3078\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mdot\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3079\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages/sagemaker/session.py\u001b[0m in \u001b[0;36m_check_job_status\u001b[0;34m(self, job, desc, status_key_name)\u001b[0m\n\u001b[1;32m   2669\u001b[0m                 ),\n\u001b[1;32m   2670\u001b[0m                 \u001b[0mallowed_statuses\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Completed\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Stopped\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2671\u001b[0;31m                 \u001b[0mactual_status\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mstatus\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2672\u001b[0m             )\n\u001b[1;32m   2673\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mUnexpectedStatusException\u001b[0m: Error for Training job sagemaker-pytorch-2020-09-03-02-17-26-116: Failed. Reason: AlgorithmError: ExecuteUserScriptError:\nCommand \"/usr/bin/python -m train --epochs 6 --hidden_dim 10 --input_dim 5 --output_dim 1\"\nTraceback (most recent call last):\n  File \"/usr/lib/python3.6/runpy.py\", line 193, in _run_module_as_main\n    \"__main__\", mod_spec)\n  File \"/usr/lib/python3.6/runpy.py\", line 85, in _run_code\n    exec(code, run_globals)\n  File \"/opt/ml/code/train.py\", line 155, in <module>\n    train(model, train_loader, args.epochs, criterion, optimizer, device)\n  File \"/opt/ml/code/train.py\", line 75, in train\n    print(\"Input Data\\npanakj_batch_x \\n\" +  batch_x +\"\\n\\npankaj_batch_y\\n\" + batch_y)\nTypeError: add(): argument 'other' (position 1) must be Tensor, not str"
+      "2020-09-03 03:08:58 Uploading - Uploading generated training model\n",
+      "2020-09-03 03:08:58 Completed - Training job completed\n",
+      "Training seconds: 47\n",
+      "Billable seconds: 47\n",
+      "CPU times: user 449 ms, sys: 10.5 ms, total: 460 ms\n",
+      "Wall time: 3min 12s\n"
      ]
     }
    ],
