--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "4  g0pA_taske.txt    e      non"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "9  g0pB_taske.txt    e         1      1"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +544,7 @@
        "4  g0pA_taske.txt    e         0      0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
        "4  dynamic programming is an algorithm design tec...  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
        "9  dynamic programming is a method for solving ma...     test  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -992,7 +992,7 @@
        "0.39814814814814814"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1117,7 +1117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1300,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -1339,7 +1339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1433,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1475,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,7 +1527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1609,7 +1609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1942,7 @@
        "[10 rows x 31 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -2873,7 +2873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2926,7 +2926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2962,7 +2962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2973,23 +2973,24 @@
       "Test size:  25\n",
       "\n",
       "Training df sample: \n",
-      " [[0.00934579 0.         0.         0.         0.19178082]\n",
-      " [0.61363636 0.26511628 0.21962617 0.1745283  0.84649123]\n",
-      " [0.15675676 0.02777778 0.01117318 0.         0.31606218]\n",
-      " [0.03174603 0.         0.         0.         0.24257426]\n",
-      " [0.00772201 0.         0.         0.         0.16117216]\n",
-      " [0.03555556 0.         0.         0.         0.30165289]\n",
-      " [0.39548023 0.11046512 0.07017544 0.01775148 0.48430493]\n",
-      " [0.         0.         0.         0.         0.27083333]\n",
-      " [0.02717391 0.         0.         0.         0.22395833]\n",
-      " [0.875      0.65467626 0.60869565 0.52205882 0.9       ]]\n"
+      " [[0.39814815 0.         0.19178082]\n",
+      " [0.86936937 0.1745283  0.84649123]\n",
+      " [0.59358289 0.         0.31606218]\n",
+      " [0.54450262 0.         0.24257426]\n",
+      " [0.32950192 0.         0.16117216]\n",
+      " [0.59030837 0.         0.30165289]\n",
+      " [0.75977654 0.01775148 0.48430493]\n",
+      " [0.51612903 0.         0.27083333]\n",
+      " [0.44086022 0.         0.22395833]\n",
+      " [0.97945205 0.52205882 0.9       ]]\n"
      ]
     }
    ],
    "source": [
     "# Select your list of features, this should be column names from features_df\n",
     "# ex. ['c_1', 'lcs_word']\n",
-    "selected_features = ['c_3', 'c_8','c_9','c_11', 'lcs_word']\n",
+    "#selected_features = ['c_3', 'c_8','c_9','c_11', 'lcs_word','c_4','c_6','c_13','c_21','c_24','c_17']\n",
+    "selected_features  = ['c_1', 'c_11' , 'lcs_word']\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -3044,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3084,7 +3085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3127,7 +3128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3144,7 +3145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -3152,21 +3153,21 @@
      "output_type": "stream",
      "text": [
       "concaded df is\n",
-      "   0         0         1         2         3         4\n",
-      "0  0  0.009346  0.000000  0.000000  0.000000  0.191781\n",
-      "1  1  0.613636  0.265116  0.219626  0.174528  0.846491\n",
-      "2  1  0.156757  0.027778  0.011173  0.000000  0.316062\n",
-      "3  0  0.031746  0.000000  0.000000  0.000000  0.242574\n",
-      "4  0  0.007722  0.000000  0.000000  0.000000  0.161172\n",
+      "   0         0         1         2\n",
+      "0  0  0.398148  0.000000  0.191781\n",
+      "1  1  0.869369  0.174528  0.846491\n",
+      "2  1  0.593583  0.000000  0.316062\n",
+      "3  0  0.544503  0.000000  0.242574\n",
+      "4  0  0.329502  0.000000  0.161172\n",
       "Now Saving\n",
       "Path created: plagiarism_data/train.csv\n",
       "concaded df is\n",
-      "   0         0         1         2         3         4\n",
-      "0  1  0.964103  0.857895  0.835979  0.791444  0.820755\n",
-      "1  1  0.664384  0.487805  0.454545  0.394366  0.621711\n",
-      "2  1  0.340807  0.091743  0.064516  0.023256  0.597458\n",
-      "3  1  0.112299  0.005495  0.000000  0.000000  0.427835\n",
-      "4  1  0.561644  0.220588  0.179104  0.123077  0.775000\n",
+      "   0         0         1         2\n",
+      "0  1  1.000000  0.791444  0.820755\n",
+      "1  1  0.765306  0.394366  0.621711\n",
+      "2  1  0.884444  0.023256  0.597458\n",
+      "3  1  0.619048  0.000000  0.427835\n",
+      "4  1  0.920000  0.123077  0.775000\n",
       "Now Saving\n",
       "Path created: plagiarism_data/test.csv\n"
      ]
