Excercise Question Answered

--- a/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
+++ b/Project_Plagiarism_Detection/2_Plagiarism_Feature_Engineering.ipynb
@@ -1149,7 +1149,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "Actually event though we are calculaing containment feature for test + train data.\n",
+    "During model training only train data will be used.\n",
+    "\n",
+    "We can think it as transforming one set of inut parameteres to other set of input parametrs.\n",
+    "\n",
+    "g(x,y) = f(lcs,c1,c2,c3,c4,c5,c6)\n",
+    "Here, on right right we have 7 type of feature, but on left side they are matched to only two feature. (with accepted information loss).\n",
+    "\n",
+    "Also, for single entry of out data. Contiment will only be calculated w.r.t origin_txt vs student_txt, so no information is merged, so no risk of influencing each other data set."
    ]
   },
   {
@@ -3018,7 +3027,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**\n"
+    "**Answer:**\n",
+    "Using data correlationg.\n",
+    "Picked anyone feature,then looking for its entry, the next feature which we should select is, who is most unrealted to selected feature.\n",
+    "\n",
+    "On deciding no of feature, we can do experimenttion. As for above coreration variation was like 1(lcs_feature) => 0.87(c_30, means its the one who is most different from lcs_feature) => 0.87(c2)\n",
+    "\n",
+    "On deciding the number of feature, need to test at which point our model start giving good result.\n"
    ]
   },
   {
